--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,29 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/variable/pretendardvariable-dynamic-subset.css");
+
 :root {
+  /* font */
+  --font-body-regular: normal 500 16px/24px "Pretendard Variable", Pretendard, sans-serif;
+  --font-body-medium: normal 500 18px/24px "Pretendard Variable", Pretendard, sans-serif;
+  --font-body-large: normal 500 22px/32px "Pretendard Variable", Pretendard, sans-serif;
+  --font-bold-small: normal 700 12px/16px "Pretendard Variable", Pretendard, sans-serif;
+  --font-bold-medium: normal 700 14px/24px "Pretendard Variable", Pretendard, sans-serif;
+  --font-bold-large: normal 700 16px/24px "Pretendard Variable", Pretendard, sans-serif;
+
+  /* color */
+  --color-black: #343a40;
+  --color-red: #e63946;
+  --color-white: #ffffff;
+  --color-primary: #edede9;
+  --color-primary-2: #d6ccc2;
+  --color-primary-3: #f5ebe0;
+  --color-primary-4: #e3d5ca;
+  --color-primary-5: #d5bdaf;
+  --color-dim: #f1f1f1;
+  --color-secondary: #f0f3f6;
+  --color-best: #e3ff73;
+}
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -12,58 +37,4 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+} */
